# school-mcp

./: .gitignore  README.md  pyproject.toml
src/school_mcp/: __init__.py  auth.py  client.py  config.py  errors.py  main.py
src/school_mcp/tools/: clazz.py  course.py  dashboard.py  grade.py  raw.py  student.py  system.py  teacher.py
tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_errors.py  test_raw.py  test_tools_student.py
